<resources>
    <!--Credenciales Aplicativo-->
    <string name="app_name">DiamondMarket</string>
    <string name="developer">Cristan Tobar</string>
    <string name="desarrollo">Desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <!--Login-->
    <string name="tittle_login">Ingrese Sesion:</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario:</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="title_clientesView">Clientes</string>

    <!--Menu Principal-->
    <string name="precioPublic">Proveedores</string>
    <string name="MP_vendidosTotalContador">Producto Mas Vendido</string>
    <string name="MP_unidadesTotalContador">Ganancias Hoy</string>
    <string name="MP_stockTotalContador">Stock Bajo:</string>
    <string name="MP_productosTotalContador">Ventas Hoy</string>
    <string name="MP_btnActualizarStock">Actualizar Stock</string>
    <string name="MP_btnVentas">Vender</string>
    <string name="MP_btnHistorialVentas">Historial Ventas</string>
    <string name="MP_btnPrecioPublico">Precio Publico</string>
    <string name="MP_btnProductos">Productos</string>
    <string name="MP_btnClientes">Clientes</string>
    <string name="MP_btnGastosView">Gastos</string>
    <string name="MP_btnRealizarGasto">Agregar Gasto</string>
    <string name="MP_cerrarCorte">Realizar Corte</string>


    <!--Deudas Formularo-->
    <string name="plazolbl">Plazo:</string>
    <string name="monto_totallbl">Monto:</string>
    <string name="fecha_pago">Fecha Pago:</string>
    <string name="pagos_restantelbl">Pagos Restantes:</string>
    <string name="pagos_totaleslbl">Pagos Totales:</string>
    <string name="id_productoslbl">Agregue Productos:</string>

    <!--Precio publico-->
    <string name="costoTotallbl">Costo General:</string>
    <string name="costoTotalProductolbl">Costo Total \nProducto:</string>
    <string name="ganancialbl">Ganancia %:</string>
    <string name="costoEnviolbl">Costo De Envio:</string>
    <string name="unidadeslbl">Unidades:</string>
    <!--Formulario-->
    <string name="tittleFP">Agregar Prodcuto</string>
    <string name="nombreFP">Nombre:</string>
    <string name="marcaFP">Marca:</string>
    <string name="modeloFP">Seccion:</string>
    <string name="descripcionFP">Descripcion:</string>
    <string name="p_publicoFP">Precio Publico:</string>
    <string name="p_netoFP">Precio Neto:</string>
    <string name="codigoBarrasFPlabel">Codigo Barras:</string>
    <string name="codigoBarrasFPButon">Escanear Codigo</string>
    <!--Productos Formulario-->
    <string name="nombreProductlbl">Nombre:</string>
    <string name="marcalbl">Marca:</string>
    <string name="precioPubliclbl">Precio Publico:</string>
    <string name="precioNetolbl">Precio Neto:</string>
    <string name="nombrelbl">Descripcion:</string>
    <string name="unidadestxtFP">Unidades:</string>
    <string name="vendidosFP">Vendidos:</string>
    <!--Creacion nueva seccion fragment-->
    <string name="nuevaSeccionlblFP">Ingrese el Nombre de la Nueva Seccion:</string>
    <string name="btnCrearSeccionFP">Crear Seccion</string>

    <!--Venta View-->
    <string name="totallblVentaView">Total:</string>
    <string name="titleVentaView">Venta</string>
    <string name="VV_noArticuloslbl">Artículos</string>
    <string name="VV_btnPagar">Pagar</string>
    <string name="VV_btnEscaner">Escanear</string>
    <string name="VV_btnCliente">Agregar\nCliente</string>
    <string name="VV_btnBuscarProducto">Buscar\nProducto</string>


    <!--Historial Ventas Item-->
    <string name="hv_idT">ID:</string>
    <string name="hv_NoProductosT">Productos:</string>
    <string name="hv_apodoClienteT">Cliente:</string>
    <string name="hv_montoT">Monto:</string>
    <string name="hvdetalle_tittle">Detalle de Venta</string>

    <!--Actualizar stock-->
    <string name="acst_tittle">Actualizar Stock</string>
    <string name="acst_idProducto">ID:</string>
    <string name="acst_nombreProducto">Nombre:</string>
    <string name="acst_stockRestante">Stock Restante:</string>
    <string name="acst_nuevoStock">Ingrese Nuevo Stock:</string>
    <string name="acst_btnActualizar">Actualizar</string>
    <string name="acst_btnEscaner">Escanear</string>
    <!--Clientes principal-->
    <string name="cp_tittle">Clientes</string>
    <string name="cp_busquedaPor">Busqueda Por:</string>
    <string name="cp_btnAgregar">Agregar</string>

    <!--Formulario Proveedor-->
    <string name="PrF_nombre_proveedor">Nombre Empresa</string>
    <string name="PrF_nombre_vendedor">Nombre Vendedor</string>
    <string name="PrF_categoria">Categoria</string>
    <string name="PrF_telefono">Telefono</string>
    <string name="PrF_direccion">Direccion</string>
    <string name="PrF_correo">Correo Eléctronico</string>
    <string name="PrF_visita">Dias Visita</string>
    <string name="PrF_observaciones">Observaciones</string>
    <string name="PrF_diasPago">Dias Pago</string>


</resources>