<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeudaActivity">

    <TextView
        android:id="@+id/pagos_totales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagos_totaleslbl"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="132dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:hint=""
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:id="@+id/montolbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto_totallbl"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_pago"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_productoslbl"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="304dp" />




</androidx.constraintlayout.widget.ConstraintLayout>