<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#141414"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductosView.FormularioProductos">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/unidadestxt"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_netotxt" />

    <TextView
        android:id="@+id/unidadeslbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:text="@string/unidadestxtFP"
        app:layout_constraintBottom_toTopOf="@+id/unidadestxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_netotxt"
        app:layout_constraintVertical_bias="0.529" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="111dp"
        android:layout_height="98dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_nuevo" />

    <TextView
        android:id="@+id/tittlelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/tittleFP"
        app:layout_constraintBottom_toTopOf="@+id/nombertxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nombrelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/nombreFP"
        app:layout_constraintBottom_toTopOf="@+id/nombertxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.56" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombertxt"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/marcalbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/marcaFP"
        app:layout_constraintBottom_toTopOf="@+id/marcatxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombertxt"
        app:layout_constraintVertical_bias="0.352" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/marcatxt"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombertxt" />

    <TextView
        android:id="@+id/modelolbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="@string/modeloFP"
        app:layout_constraintBottom_toTopOf="@+id/modelotxt"
        app:layout_constraintStart_toEndOf="@+id/marcalbl"
        app:layout_constraintTop_toBottomOf="@+id/nombertxt"
        app:layout_constraintVertical_bias="0.352" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/modelotxt"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/marcatxt"
        app:layout_constraintTop_toBottomOf="@+id/nombertxt" />

    <TextView
        android:id="@+id/descriptionlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/descripcionFP"
        app:layout_constraintBottom_toTopOf="@+id/descripciontxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcatxt"
        app:layout_constraintVertical_bias="0.428" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descripciontxt"
        android:layout_width="295dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        android:gravity="top|start"
        android:hint=""
        android:inputType="textMultiLine"
        android:minLines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelotxt" />

    <TextView
        android:id="@+id/p_publicolbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/p_publicoFP"
        app:layout_constraintBottom_toTopOf="@+id/p_publicotxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripciontxt"
        app:layout_constraintVertical_bias="0.47" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/p_publicotxt"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripciontxt" />

    <TextView
        android:id="@+id/p_netolbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/p_netoFP"
        app:layout_constraintBottom_toTopOf="@+id/p_netotxt"
        app:layout_constraintStart_toEndOf="@+id/p_publicolbl"
        app:layout_constraintTop_toBottomOf="@+id/descripciontxt"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/p_netotxt"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toEndOf="@+id/p_publicotxt"
        app:layout_constraintTop_toBottomOf="@+id/descripciontxt" />

    <TextView
        android:id="@+id/codeBarlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/codigoBarrasFPlabel"
        app:layout_constraintBottom_toTopOf="@+id/codeBartxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_publicotxt"
        app:layout_constraintVertical_bias="0.529" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/codeBartxt"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_publicotxt" />

    <Button
        android:id="@+id/escanearButton"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:onClick=""
        android:text="@string/codigoBarrasFPlabel"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeBartxt" />

    <Button
        android:id="@+id/agregarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:background="@drawable/button_border"
        android:onClick="addProductView"
        android:text="Agregar"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_netotxt" />

</androidx.constraintlayout.widget.ConstraintLayout>